// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AbacEnabledToggle should be disabled when abac license is not installed 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-field rcx-css-1gfu76s"
    >
      <div
        class="rcx-box rcx-box--full rcx-css-1u2ihfm"
      >
        <div
          class="rcx-box rcx-box--full rcx-field"
        >
          <span
            class="rcx-box rcx-box--full rcx-field__row rcx-css-ctk2ij"
          >
            <label
              class="rcx-box rcx-box--full rcx-field__label rcx-label"
              for="ABAC_Enabled"
              title="ABAC_Enabled"
            >
              Enable ABAC
            </label>
            <div
              class="rcx-box rcx-box--full rcx-css-127j9mz"
            >
              <label
                class="rcx-box rcx-box--full rcx-toggle-switch"
              >
                <input
                  checked=""
                  class="rcx-box rcx-box--full rcx-toggle-switch__input"
                  disabled=""
                  id="ABAC_Enabled"
                  type="checkbox"
                />
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-toggle-switch__fake"
                />
              </label>
            </div>
          </span>
          <span
            class="rcx-box rcx-box--full rcx-field__hint"
          >
            Enable Attribute-Based Access Control
          </span>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`AbacEnabledToggle should render the setting toggle when setting exists 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-field rcx-css-1gfu76s"
    >
      <div
        class="rcx-box rcx-box--full rcx-css-1u2ihfm"
      >
        <div
          class="rcx-box rcx-box--full rcx-field"
        >
          <span
            class="rcx-box rcx-box--full rcx-field__row rcx-css-ctk2ij"
          >
            <label
              class="rcx-box rcx-box--full rcx-field__label rcx-label"
              for="ABAC_Enabled"
              title="ABAC_Enabled"
            >
              Enable ABAC
            </label>
            <div
              class="rcx-box rcx-box--full rcx-css-127j9mz"
            >
              <button
                class="rcx-box rcx-box--full rcx-button--small-square rcx-button--icon-danger rcx-button--square rcx-button--icon rcx-button rcx-css-1rtu0k9"
                title="Reset"
                type="button"
              >
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-undo rcx-icon rcx-css-4pvxx3"
                >
                  ❰
                </i>
              </button>
              <label
                class="rcx-box rcx-box--full rcx-toggle-switch"
              >
                <input
                  checked=""
                  class="rcx-box rcx-box--full rcx-toggle-switch__input"
                  id="ABAC_Enabled"
                  type="checkbox"
                />
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-toggle-switch__fake"
                />
              </label>
            </div>
          </span>
          <span
            class="rcx-box rcx-box--full rcx-field__hint"
          >
            Enable Attribute-Based Access Control
          </span>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`AbacEnabledToggle should show skeleton when loading 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-field"
    >
      <label
        class="rcx-box rcx-box--full rcx-field__label rcx-label rcx-css-1exa5vl"
      >
        <span
          class="rcx-skeleton rcx-skeleton--text rcx-css-1v1eapn"
        />
      </label>
      <span
        class="rcx-box rcx-box--full rcx-field__row"
      >
        <div
          class="rcx-box rcx-box--full rcx-skeleton__input"
        >
          <span
            class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
          />
        </div>
      </span>
    </div>
  </div>
</body>
`;
